# netrisk

./: .project-settings.yml  README.md  netrisk.cabal  stack.yaml  testdata.txt
Test/: Basic.hs  Core.hs
src/: Main.hs
src/Netrisk/: Core.hs
