name:                netrisk
version:             0.1.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/tomberek/netrisk
license:             BSD3
author:              Thomas Bereknyei
maintainer:          tomberek@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  stack.yaml README.md
cabal-version:       >=1.10
data-files:          testdata.txt

library
  exposed-modules:     Netrisk.Core
  ghc-options:         -fno-warn-orphans -O2 -threaded -rtsopts -with-rtsopts=-N8
  hs-source-dirs:      src
  build-depends:       base
                     , attoparsec
                     , iproute
                     , containers
                     , bytestring
                     , time
                     , parallel
                     , auto
                     , split
                     , unordered-containers
                     , hashable
  default-language:    Haskell2010
executable netrisk
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -fno-warn-orphans -O2 -threaded -rtsopts -with-rtsopts=-N8
  build-depends:       base
                     , attoparsec
                     , iproute
                     , containers
                     , bytestring
                     , time
                     , parallel
                     , auto
                     , split
                     , unordered-containers
                     , hashable
  default-language:    Haskell2010
Test-Suite netrisk-tests
  type:                exitcode-stdio-1.0
  main-is:             Test/Basic.hs
  ghc-options:         -fno-warn-tabs
  build-depends:       base
                     , attoparsec
                     , iproute
                     , containers
                     , bytestring
                     , time
                     , parallel
                     , auto
                     , split
                     , unordered-containers
                     , hashable
                     , hspec
                     , netrisk
                     , tasty-hunit
                     , tasty
  default-language:    Haskell2010



